tests/ui/const-generics/failing_goal_with_repeat_expr_anon_const.stderr
error: constant expression depends on a generic parameter
  --> $DIR/failing_goal_with_repeat_expr_anon_const.rs:14:15
   |
LL |         [0u8; std::mem::size_of::<Self::A>()] == Self::P;
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 1 previous error

